--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Chat app</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<body>
-  <p>Welcome to the chat app!</p>
+<body class="chat">
 
-  <ol id="messages"></ol>
+  <div class="chat__sidebar">
+    <h3>People</h3>
+    <div id="users"></div>
+  </div>
 
-  <form id="message-form">
-    <input name="message" type="text" placeholder="Message" />
-    <button>Send</button>
-  </form>
+  <div class="chat__main">
+    <ol id="messages" class="chat__messages"></ol>
 
-  <button id="send-location">Send location</button>
+    <div class="chat__footer">
+      <form id="message-form">
+        <input name="message" type="text" placeholder="Message" autofocus autocomplete="off" />
+        <button>Send</button>
+      </form>
+    
+      <button id="send-location">Send location</button>
+    </div>
+  </div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/lib/jquery-3.3.1.min.js"></script>
